Added tags + optimized code.