@@ -10,70 +10,61 @@ version = '3.5.2'
 
 repositories {
     mavenCentral()
-    maven {
-        name = "papermc-repo"
-        url = "https://repo.papermc.io/repository/maven-public/"
+    maven { name = "papermc-repo"; url = "https://repo.papermc.io/repository/maven-public/" }
+    maven { name = 'minecraft-repo'; url = 'https://libraries.minecraft.net/' }
+    maven { name = "sonatype"; url = "https://oss.sonatype.org/content/groups/public/" }
+    maven { url = 'https://repo.extendedclip.com/releases/' }
+    maven { url = 'https://jitpack.io' }
+    maven { name = 'spigotmc-repo'; url = 'https://hub.spigotmc.org/nexus/content/repositories/snapshots/' }
+    maven { url = 'https://maven.elmakers.com/repository/' }
+}
+
+configurations {
+    configureEach {
+        resolutionStrategy {
+            force 'io.papermc.paper:paper-api:1.21.5-R0.1-SNAPSHOT'
+            force 'com.google.code.gson:gson:2.10.1'
+        }
     }
-
-    maven {
-        name = "sonatype"
-        url = "https://oss.sonatype.org/content/groups/public/"
-    }
-
-    maven {
-        url = 'https://repo.extendedclip.com/releases/'
-    }
-
-
-    maven { url 'https://jitpack.io' }
+    all*.exclude group: 'org.spigotmc', module: 'spigot-api'
 }
 
 dependencies {
-    compileOnly("io.papermc.paper:paper-api:1.21.4-R0.1-SNAPSHOT")
-
-    // PlaceholderAPI
+    compileOnly 'io.papermc.paper:paper-api:1.21.5-R0.1-SNAPSHOT'
     compileOnly 'me.clip:placeholderapi:2.11.6'
-
-    // LuckPerms
     compileOnly 'net.luckperms:api:5.4'
+    implementation 'com.zaxxer:HikariCP:5.1.0'
 
-    // HikariCP (for MySQL connection pooling)
-    implementation("com.zaxxer:HikariCP:5.1.0") // or latest
-
-    def scoreboardLibraryVersion = "2.2.2"
-    implementation("net.megavex:scoreboard-library-api:$scoreboardLibraryVersion")
-    runtimeOnly("net.megavex:scoreboard-library-implementation:$scoreboardLibraryVersion")
-    implementation("net.megavex:scoreboard-library-extra-kotlin:$scoreboardLibraryVersion") // Kotlin specific extensions (optional)
-
-    // Add packet adapter implementations you want:
-    runtimeOnly("net.megavex:scoreboard-library-modern:$scoreboardLibraryVersion") // 1.17+
-
-    // If targeting a Minecraft version without native Adventure support, add it as well:
-    //implementation("net.kyori:adventure-platform-bukkit:4.3.4")
+    def scoreboardLibraryVersion = "2.3.0"
+    implementation "net.megavex:scoreboard-library-api:$scoreboardLibraryVersion"
+    runtimeOnly "net.megavex:scoreboard-library-implementation:$scoreboardLibraryVersion"
+    implementation "net.megavex:scoreboard-library-extra-kotlin:$scoreboardLibraryVersion"
+    runtimeOnly "net.megavex:scoreboard-library-modern:$scoreboardLibraryVersion"
 }
 
-tasks {
-  runServer {
-    minecraftVersion("1.21")
-  }
-}
-
-def targetJavaVersion = 21
 java {
-    def javaVersion = JavaVersion.toVersion(targetJavaVersion)
-    sourceCompatibility = javaVersion
-    targetCompatibility = javaVersion
-    if (JavaVersion.current() < javaVersion) {
-        toolchain.languageVersion = JavaLanguageVersion.of(targetJavaVersion)
-    }
+    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
 }
 
 tasks.withType(JavaCompile).configureEach {
     options.encoding = 'UTF-8'
+    options.compilerArgs += '--enable-preview'
+    options.release.set(21)
+}
 
-    if (targetJavaVersion >= 10 || JavaVersion.current().isJava10Compatible()) {
-        options.release.set(targetJavaVersion)
-    }
+tasks.withType(JavaExec).configureEach {
+    jvmArgs += '--enable-preview'
+}
+
+tasks.withType(Javadoc).configureEach {
+    options.addBooleanOption("html5", true)
+    options.addStringOption('-release', '21')
+    options.addStringOption('--enable-preview', null)
+}
+
+tasks.named("runServer", JavaExec) {
+    jvmArgs += "--enable-preview"
+    minecraftVersion("1.21.5")
 }
 
 processResources {
